# todoist-analytics

./: .dockerignore  .gitignore  Dockerfile  Homepage.py  Makefile  Procfile  README.md  dashboard.py  justfile  main.py  pyproject.toml  requirements.txt  setup.cfg  setup_app.py.sh  streamlit_app.py  🏠_Homepage.py
.github/workflows/: main_todoist-analytics.yml
.streamlit/: config.toml  secrets.toml
docs/: conf.py  index.rst  todoist-analytics.rst  todoist_analytics.rst
hooks/: pyproject.py
pages/: 01_🎯_Habits.py  02_📈_Productivity.py  03_📝_Planning.py  1_Details & Habits.py  1_Details.py  1_Habit_Tracker.py  1_Habits.py  1_Habits_&_Goals.py  2_Details.py  2_Goals.py  2_Productivity.py  habits.py  overview.py
src/: Homepage.py  auth.py  data.py  data_collector.py  filters.py  plots.py  session.py  session_state.py  utils.py
src/backend/: auth.py  data_collector.py  utils.py
src/frontend/: colorscale.py  dashboard.py  filters.py  habit_tracker.py  habits.py  overview.py  plots.py
src/pages/: 1_📝_Habit_Tracker.py  2_📊_Details.py
tests/: test_todoist-analytics.py  test_todoist_analytics.py
todoist-analytics/: create_report.py  dashboard.py  data.py
todoist-analytics/backend/: data.py
todoist_analytics/: constants.py
todoist_analytics/backend/: auth.py  data_collector.py  preprocess.py  session_state.py  sync_api.py  todoist.py  utils.py
todoist_analytics/frontend/: colorscale.py  dashboard.py  filters.py  habit_tracker.py  habits.py  overview.py  plots.py
