[tool.poetry]
name = "todoist-analytics"
version = "0.0.0"
description = ""
authors = ["Bruno Rodrigues <b.rosilva1@gmail.com>"]
readme = "README.md"
packages = [
    {include = "todoist_analytics"}
]

[tool.poetry.dependencies]
python = "^3.7.4"
todoist-python = "^8.1.3"
matplotlib = "^3.4.3"
pandas = "^1.3.4"
streamlit = "1.3.1"
plotly-calplot = "^0.1.7"
vulture = "^2.3"
oauthlib = "^3.2.0"
requests = "^2.27.1"
pyyaml = "6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.4.2"
myst-parser = "^0.13.1"
pydata-sphinx-theme = "^0.4.1"
ghp-import = "^1.0.0"
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
