[tool.poetry]
name = "todoist-analytics"
version = "0.0.0"
description = ""
authors = ["Bruno Rodrigues <b.rosilva1@gmail.com>"]
readme = "README.md"
packages = [
    {include = "todoist_analytics"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0.0"
todoist-api-python = "^2.1.3"
altair = "^4.0"
streamlit = "^1.25.0"
flask = "^3.0.0"
requests = "^2.31.0"
requests-mock = "^1.11.0"
plotly-calplot = "^0.1.16"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
isort = "^5.9.3"
click = "^8.1.7"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
